[package]
name = "art_rs"
version = "0.1.0"
edition = "2024"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
thirtyfour = { version = "0.35", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
sysinfo = "0.37"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
once_cell = "1.21"
